--- a/OCROverlay/OCROverlay/FirstRunForm.xaml
+++ b/OCROverlay/OCROverlay/FirstRunForm.xaml
@@ -9,9 +9,14 @@
         Height="320" 
         Width="480"
         WindowStartupLocation="CenterScreen" Background="White">
+    
     <Grid>
-        <Button x:Name="btn_confirm" Content="Confirm" HorizontalAlignment="Left" Margin="173,237,0,0" VerticalAlignment="Top" Width="130" Height="34" FontSize="18" Click="btn_confirm_Click"/>
-        <Button x:Name="btn_languages" Content="Select Languages" HorizontalAlignment="Left" Margin="68,62,0,0" VerticalAlignment="Top" Width="183" Height="34" FontSize="18" Click="btn_languages_Click"/>
-        <Button x:Name="btn_screens" Content="Select Screen" HorizontalAlignment="Left" Margin="68,110,0,0" VerticalAlignment="Top" Width="183" Height="34" FontSize="18" Click="btn_screens_Click" IsEnabled="False"/>
+        <Button x:Name="btn_languages" Content="Select Languages" HorizontalAlignment="Left" Margin="25,48,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_languages_Click"/>
+        <Button x:Name="btn_screens" Content="Select Screen" HorizontalAlignment="Left" Margin="25,106,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_screens_Click" IsEnabled="False"/>        
+        <Image x:Name="img_lang_tick" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/tick.png" Height="48" Margin="321,48,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_lang_cross" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/cross.png" Height="48" Margin="374,48,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_screen_tick" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/tick.png" Height="48" Margin="321,106,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_screen_cross" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/cross.png" Height="48" Margin="374,101,0,0" VerticalAlignment="Top" Width="48"/>
+        <Button x:Name="btn_confirm" Content="Confirm" HorizontalAlignment="Left" Margin="142,231,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_confirm_Click"/>
     </Grid>
 </Window>
