--- a/OCROverlay/OCROverlay/LanguageSelectionForm.xaml
+++ b/OCROverlay/OCROverlay/LanguageSelectionForm.xaml
@@ -5,9 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OCROverlay"
         mc:Ignorable="d"
-        Title="LanguageSelectionFomr" Height="450" Width="685.973">
+        Title="LanguageSelectionFomr" Height="450" Width="685.973" ResizeMode="NoResize">
     <Grid>
-        <ListBox x:Name="listBox_all_langs" HorizontalAlignment="Left" Height="357" Margin="10,52,0,0" VerticalAlignment="Top" Width="250" SelectionMode="Multiple"/>
+        <ListBox x:Name="listBox_available_langs" ItemsSource="{Binding}" HorizontalAlignment="Left" Height="357" Margin="10,52,0,0" VerticalAlignment="Top" Width="250" SelectionMode="Multiple">
+            <ListBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding longName}"/>
+                </DataTemplate>
+            </ListBox.ItemTemplate>
+        </ListBox>
         <ListBox x:Name="listBox_selected_langs" Height="357" Margin="418,52,10,0" VerticalAlignment="Top" HorizontalAlignment="Right" Width="250" SelectionMode="Multiple"/>
         
         <Label x:Name="lbl_available_lang" Content="Available Languages" HorizontalAlignment="Left" Margin="38,10,0,0" FontSize="20"  VerticalAlignment="Top" Width="190"/>
