--- a/OCROverlay/OCROverlay/View/SetupForm.xaml
+++ b/OCROverlay/OCROverlay/View/SetupForm.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="OCROverlay.FirstRunForm"
+﻿<Window x:Class="OCROverlay.View.SetupForm"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -14,11 +14,11 @@
         <Button x:Name="btn_languages" Content="Select Languages" HorizontalAlignment="Left" Margin="25,48,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_languages_Click"/>
         <Button x:Name="btn_screens" Content="Select Screen" HorizontalAlignment="Left" Margin="25,106,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_screens_Click" IsEnabled="False"/>        
         
-        <Image x:Name="img_lang_tick" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/tick.png" Height="48" Margin="321,48,0,0" VerticalAlignment="Top" Width="48"/>
-        <Image x:Name="img_lang_cross" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/cross.png" Height="48" Margin="374,48,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_lang_tick" HorizontalAlignment="Left" Visibility="Hidden"  Height="48" Margin="321,48,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_lang_cross" HorizontalAlignment="Left" Visibility="Hidden" Height="48" Margin="374,48,0,0" VerticalAlignment="Top" Width="48"/>
         
-        <Image x:Name="img_screen_tick" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/tick.png" Height="48" Margin="321,106,0,0" VerticalAlignment="Top" Width="48"/>
-        <Image x:Name="img_screen_cross" HorizontalAlignment="Left" Visibility="Hidden" Source="Resources/cross.png" Height="48" Margin="374,101,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_screen_tick" HorizontalAlignment="Left" Visibility="Hidden" Height="48" Margin="321,106,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_screen_cross" HorizontalAlignment="Left" Visibility="Hidden" Height="48" Margin="374,101,0,0" VerticalAlignment="Top" Width="48"/>
         
         <Button x:Name="btn_confirm" Content="Confirm" HorizontalAlignment="Left" Margin="142,231,0,0" VerticalAlignment="Top" Width="201" Height="48" FontSize="24" Click="btn_confirm_Click"/>
     </Grid>
