Transparent window implementation

--- a/OCROverlay/OCROverlay/View/MainWindow.xaml
+++ b/OCROverlay/OCROverlay/View/MainWindow.xaml
@@ -5,8 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:OCROverlay"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="{Binding Height}" Width="{Binding Width}" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None"
+        AllowsTransparency="True" Background="Transparent">
+    <Grid/>
 </Window>
