Added key up/down events sent to viewmodel  - need to handle holding keys down and multiple key presses to avoid the same key being assigned as the trigger multiple times

--- a/OCROverlay/OCROverlay/View/SetupForm.xaml
+++ b/OCROverlay/OCROverlay/View/SetupForm.xaml
@@ -3,39 +3,52 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:in="http://schemas.microsoft.com/xaml/behaviors"
         xmlns:local="clr-namespace:OCROverlay"
         xmlns:ap="clr-namespace:OCROverlay.Util"
         ap:DialogCloser.DialogResult="{Binding Close}"
         mc:Ignorable="d"
         Title="Program Setup" 
-        Height="320" 
+        Height="369.756" 
         Width="500"
         WindowStartupLocation="CenterScreen" Background="White">
+    <in:Interaction.Triggers>
+        <in:EventTrigger EventName="PreviewKeyDown">
+            <in:InvokeCommandAction Command="{Binding KeyDownEvent}" PassEventArgsToCommand="True"/>
+        </in:EventTrigger>
+        <in:EventTrigger EventName="PreviewKeyUp">
+            <in:InvokeCommandAction Command="{Binding KeyUpEvent}" PassEventArgsToCommand="True"/>
+        </in:EventTrigger>
+    </in:Interaction.Triggers>
     <Grid>
         <Button x:Name="btn_download_location" Content="Download Location" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="50"
          Margin="10,42,0,0" Command="{Binding DownloadLocationCommand}" FontSize="22"/>
+        <Button x:Name="btn_hotkey" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="50"
+            FontSize="24" Content="Choose Hotkey" Margin="10,97,0,0" Command="{Binding ChooseHotkeyCommand}" />
         <Button x:Name="btn_languages" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="50"
-        FontSize="24" Content="Select Languages" Margin="10,101,0,0" Command="{Binding SetupLanguagesCommand}" />
+        FontSize="24" Content="Select Languages" Margin="10,151,0,0" Command="{Binding SetupLanguagesCommand}" />
         <TextBlock x:Name="btn_screens" HorizontalAlignment="Left" VerticalAlignment="Top" Width="144" Height="32"
-        FontSize="24" Text="Select Screen" Margin="35,170,0,0"/>
+        FontSize="24" Text="Select Screen" Margin="35,220,0,0"/>
 
-        <Image x:Name="img_lang_tick" HorizontalAlignment="Left" Visibility="{Binding LanguageTickVisibility}" Height="48" ToolTip="You chose 2 or more languages" Margin="303,101,0,0" VerticalAlignment="Top" Width="48"/>
-        <Image x:Name="img_lang_cross" HorizontalAlignment="Left" Visibility="{Binding LanguageCrossVisibility}" ToolTip="You need to choose 2 or more languages" Height="48" Margin="372,101,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_lang_tick" HorizontalAlignment="Left" Visibility="{Binding LanguageTickVisibility}" Height="48" ToolTip="You chose 2 or more languages" Margin="303,151,0,0" VerticalAlignment="Top" Width="48"/>
+        <Image x:Name="img_lang_cross" HorizontalAlignment="Left" Visibility="{Binding LanguageCrossVisibility}" ToolTip="You need to choose 2 or more languages" Height="48" Margin="372,151,0,0" VerticalAlignment="Top" Width="48"/>
 
         <!--<Image x:Name="img_screen_tick" HorizontalAlignment="Left" Visibility="Hidden" Height="48" Margin="321,106,0,0" VerticalAlignment="Top" Width="48"/>
         <Image x:Name="img_screen_cross" HorizontalAlignment="Left" Visibility="Hidden" Height="48" Margin="374,101,0,0" VerticalAlignment="Top" Width="48"/>-->
 
         <Button x:Name="btn_confirm" HorizontalAlignment="Left" VerticalAlignment="Top" Width="200" Height="50"
-        FontSize="24" Content="Confirm" Margin="142,226,0,0" Command="{Binding ConfirmCommand}"/>
+        FontSize="24" Content="Confirm" Margin="142,276,0,0" Command="{Binding ConfirmCommand}"/>
 
         <TextBlock x:Name="lbl_download_location" HorizontalAlignment="Left"  Text="{Binding DownloadLocationText}" Margin="235,42,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="48" Width="227"/>
 
-        <ComboBox x:Name="cmbBox_screens" ItemsSource="{Binding ScreenList}" SelectedItem="{Binding ScreenListSelected}" Margin="226,162,0,0" SelectedIndex="0" Width="250" Height="43" HorizontalAlignment="Left" VerticalAlignment="Top">
+        <TextBlock x:Name="lbl_keys_pressed" HorizontalAlignment="Left"  Text="{Binding KeysPressedText}" Margin="235,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="52" Width="227"/>
+
+        <ComboBox x:Name="cmbBox_screens" ItemsSource="{Binding ScreenList}" SelectedItem="{Binding ScreenListSelected}" Margin="226,212,0,0" SelectedIndex="0" Width="250" Height="43" HorizontalAlignment="Left" VerticalAlignment="Top">
             <ComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock Text="{Binding CombinedValue}" VerticalAlignment="Center" FontSize="22"/>
                 </DataTemplate>
             </ComboBox.ItemTemplate>
-        </ComboBox>
+        </ComboBox>        
     </Grid>
 </Window>
