Added generic Property Manager class and methods, finished download manager and added Tesseract build binary. Added sample images to test on and more properties.

--- a/OCROverlay/OCROverlay/View/MainWindow.xaml
+++ b/OCROverlay/OCROverlay/View/MainWindow.xaml
@@ -6,6 +6,6 @@
         xmlns:local="clr-namespace:OCROverlay"
         mc:Ignorable="d"
         Title="MainWindow" Height="{Binding Height}" Width="{Binding Width}" WindowState="Maximized" WindowStartupLocation="CenterScreen" WindowStyle="None"
-        AllowsTransparency="True" Background="Transparent">
+        AllowsTransparency="True" Background="Transparent" ShowInTaskbar="False">
     <Grid/>
 </Window>
